# AdaLLaVA-X

./: .gitignore  README.md  pyproject.toml  test.py
docs/: Evaluation_LLaVA.md  MODEL_ZOO.md
scripts/: train_script.sh
scripts/convert/: convert_lmms_vqav2.py  convert_vqav2_for_submission.py
scripts/eval/: vqav2.sh
src/adallava/eval/: ada_analyzer.py  adallava_wrapper.py  lmms_eval_utils.py  model_vqa_loader.py  run_ada_llava.py  run_lmms_eval.py
src/adallava/model/: __init__.py  ada_llava_llama.py  builder.py
src/adallava/model/language_model/ada_llama/: cache_utils.py  configuration_ada_llama.py  modeling_ada_llama.py
src/adallava/model/multimodal_encoder/: prumerge_utils.py
src/adallava/model/scheduler/: __init__.py  scheduler_utils.py  simple_scheduler.py
src/adallava/train/: train.py  train_mem.py
