[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adallava"
version = "0.1.0"
description = "AdaLLaVA"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://zhuoyan-xu.github.io/ada-llava/"

[tool.setuptools.packages.find]
where = ["src"]